fixed icon spacing mobile view navbar

--- a/application/frontend/src/components/Nav/NavBarLeft.module.css
+++ b/application/frontend/src/components/Nav/NavBarLeft.module.css
@@ -2,6 +2,7 @@
     flex-basis: 15%;
     display: flex;
     justify-content: center;
+    margin-left: 1rem;
 }
 
 .logo-img,
