--- a/application/frontend/src/components/Nav/NavBarRight.module.css
+++ b/application/frontend/src/components/Nav/NavBarRight.module.css
@@ -3,6 +3,7 @@
     flex-basis: 15%;
     display: flex;
     justify-content: flex-end;
+    margin-right: 1rem;
 }
 
 .login-button{
@@ -111,7 +112,6 @@
 
     .account-menu-icon{
         height: 35px;
-        margin-right: .5rem;
         transition: .15s ease-in-out;
     }
 
@@ -127,10 +127,10 @@
 }
 
 @media (max-width: 1170px){
-
     .menu-icon{
-        margin: 0 1rem;
+        height: 35px;
     }
+
     .menu-icon:hover{
         cursor: pointer;
         filter: invert(51%) sepia(12%) saturate(2293%) hue-rotate(134deg) brightness(92%) contrast(88%);
@@ -138,7 +138,8 @@
 }
 
 @media (max-width: 450px){
-    .menu-icon{
-        margin: 0 1rem;
+
+    .search-icon{
+        margin-right: 1rem;
     }
 }
